--- a/src/trace/test/dune
+++ b/src/trace/test/dune
@@ -1,4 +1,9 @@
 (test
  (name test_trace)
- (libraries trace yojson)
+ (libraries trace yojson z3)
  (modules test_trace))
+
+(test
+ (name test_circles)
+ (libraries trace yojson z3)
+ (modules test_circles))
