Test using the Trace and Formulas to check Satisfiability + the necessary changes

--- a/src/ltlxms/test/dune
+++ b/src/ltlxms/test/dune
@@ -7,3 +7,8 @@
  (name test_formulas)
  (libraries z3 formulas yojson ltlxms)
  (modules test_formulas))
+
+(executable
+ (name test_until_trace)
+ (modules test_until_trace)
+ (libraries ltlxms formulas trace z3 yojson) )
