--- a/Makefile.in
+++ b/Makefile.in
@@ -24,6 +24,7 @@ version:
 	echo "let git = \"`git describe --tags` (`git rev-parse HEAD`)\n`uname -m -o` `date +\"%Y-%m-%d %H:%M\"`\"" > src/version.ml
 
 tests:
+	dune runtests
 	mkdir -p _build_tests && cp -R unittests/* _build_tests && cd _build_tests && bash -ex test.sh $(TESTS_ARGS)
 
 clean-tests:
