--- a/src/js/dune
+++ b/src/js/dune
@@ -1,7 +1,7 @@
 (library
   (name            js)
   (public_name     rmtld3synth.js)
-  (libraries       sexplib ppx_sexp_conv %LIBRARIES%)
+  (libraries       sexplib ppx_sexp_conv )
   (modules         Helper_)
-  (preprocess      (pps ppx_sexp_conv %PPX%))
+  (preprocess      (pps ppx_sexp_conv ))
 )
