--- a/src/dune
+++ b/src/dune
@@ -2,8 +2,8 @@
 (executable
   (name            rmtld3synth)
   (public_name     rmtld3synth)
-  (libraries       rmtld3synth.synthesis rmtld3synth.ltlxms rmtld3synth.trace)
-  (modules         Rmtld3synth Version )
+  (libraries       rmtld3synth.synthesis rmtld3synth.ltlxms rmtld3synth.sequence)
+  (modules         Rmtld3synth Version)
   (flags           (-cclib -lstdc++) )
   (modes           byte exe)
 )
