--- a/src/ltlxms/dune
+++ b/src/ltlxms/dune
@@ -1,7 +1,7 @@
 (library
  (name ltlxms)
  (public_name rmtld3synth.ltlxms)
- (libraries z3 yojson)
+ (libraries z3 yojson sequence)
  (preprocess
   (pps ppx_yojson_conv))
- (modules syntax encoding))
+ (modules syntax encoding trace_check))
