--- a/rmtld3synth.opam
+++ b/rmtld3synth.opam
@@ -36,4 +36,7 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 
-run-test: [make "tests" "allchecks"]
+run-test: [
+  ["dune" "runtest" "-p" name "-j" jobs]
+  [make "tests" "allchecks"]
+]
