--- a/src/ltlxms/tests/dune
+++ b/src/ltlxms/tests/dune
@@ -1,7 +1,12 @@
 (test
- (name test_formulas)
+ (name test_print_ltlxms)
+ (libraries yojson ltlxms)
+ (modules test_print_ltlxms))
+
+(test
+ (name test_ltlxms)
  (libraries z3 yojson ltlxms)
- (modules test_formulas)
+ (modules test_ltlxms)
  (deps
   test1.json
   test2.json
@@ -46,24 +51,33 @@
   test21.out))
 
 (executable
- (name test_until_trace)
- (modules test_until_trace)
+ (name test_with_trace)
+ (modules test_with_trace)
  (libraries ltlxms sequence z3 yojson))
 
 (rule
  (alias runtest)
- (deps ../../sequence/tests/Scenario5_Test1.json property.json)
+ (deps ../../sequence/tests/scenario5.json property1.json)
  (action
   (run
-   ./test_until_trace.exe
-   ../../sequence/tests/Scenario5_Test1.json
-   property.json)))
+   ./test_with_trace.exe
+   ../../sequence/tests/scenario5.json
+   property1.json)))
 
 (rule
  (alias runtest)
- (deps ../../sequence/tests/Scenario6_Test1.json property2.json)
+ (deps ../../sequence/tests/scenario6.json property2.json)
  (action
   (run
-   ./test_until_trace.exe
-   ../../sequence/tests/Scenario6_Test1.json
+   ./test_with_trace.exe
+   ../../sequence/tests/scenario6.json
    property2.json)))
+
+(rule
+ (alias runtest)
+ (deps ../../sequence/tests/scenario6.json property3.json)
+ (action
+  (run
+   ./test_with_trace.exe
+   ../../sequence/tests/scenario6.json
+   property3.json)))
