Refactoring ltlxms and sequence modules.

--- a/src/ltlxms/dune
+++ b/src/ltlxms/dune
@@ -4,4 +4,4 @@
  (libraries z3 yojson sequence)
  (preprocess
   (pps ppx_yojson_conv))
- (modules syntax encoding trace_check))
+ (modules syntax encoding check))
