--- a/src/ltlxms/dune
+++ b/src/ltlxms/dune
@@ -4,4 +4,6 @@
  (libraries z3 yojson sequence)
  (preprocess
   (pps ppx_yojson_conv))
- (modules syntax encoding check))
+ (modules syntax encoding check)
+ (enabled_if
+  (= %{profile} "release")))
