--- a/Makefile.in
+++ b/Makefile.in
@@ -13,7 +13,7 @@ endif
 all: compile install
 
 compile: setup
-	dune build --profile release @install
+	dune build --verbose --profile release @install
 	dune build --profile release @test
 
 setup: version zsolver
